# discord-dpi

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/discdpi-cli/: Cargo.toml
crates/discdpi-cli/src/: main.rs
crates/discdpi-core/: Cargo.toml
crates/discdpi-core/src/: desync.rs  lib.rs  packet.rs  strategy.rs  tls.rs
crates/discdpi-filter/: Cargo.toml
crates/discdpi-filter/src/: lib.rs  windivert.rs
crates/discdpi-platform/: Cargo.toml
crates/discdpi-platform/src/: lib.rs  windows.rs
docs/: BUILD.md
lists/: discord-domains.txt  discord-ipset.txt
profiles/: default.toml
scripts/: setup-windivert.ps1
