[package]
name = "discdpi-cli"
description = "CLI for discord-dpi"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "discdpi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
discdpi-core = { path = "../discdpi-core" }
discdpi-filter = { path = "../discdpi-filter" }
discdpi-platform = { path = "../discdpi-platform" }
tracing.workspace = true
tracing-subscriber.workspace = true
