[package]
name = "discdpi-core"
description = "Core DPI desync logic for Discord traffic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
etherparse = "0.13"
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
