[package]
name = "discdpi-platform"
description = "Windows WinDivert platform backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
# windivert = "0.6"  # enable when WinDivert is vendored
