[package]
name = "discdpi-platform"
description = "Windows WinDivert platform backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
discdpi-core = { path = "../discdpi-core" }
discdpi-filter = { path = "../discdpi-filter" }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
ctrlc.workspace = true
windivert.workspace = true
